--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -21,8 +21,8 @@
 					class="icon-bar"></span> <span class="icon-bar"></span> <span
 					class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#" th:href="@{/}">Registration and
-				Login Module</a>
+			<a class="navbar-brand" href="#" th:href="@{/}">Home Page
+				</a>
 		</div>
 	</div>
 </nav>
@@ -59,8 +59,8 @@
 					<label class="control-label" for="password"> Password </label> <input
 						id="password" class="form-control" type="password"
 						th:field="*{password}" required autofocus="autofocus"
-						pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-						title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"/>
+						pattern="(?=.*\d)(?=.*[a-z])(?=.*[@$!%*#?&><^-_/~%()+=])(?=.*[A-Z]).{8,}"
+						title="Must contain at least one number, one uppercase and lowercase letter, one special character and at least 8 or more characters"/>
 				</div>
 
 				<div class="form-group">
