--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta charset="ISO-8859-1">
-	<title>Welcome to CodeJava Home</title>
-	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
-	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+	<title>Welcome Home</title>
 </head>
 <body>
 	<div class="container text-center">
@@ -14,6 +11,7 @@
 		<h3><a th:href="@{/register}">Register</a></h3>
 		<h3><a th:href="@{/login}">Login</a></h3>
 		<h3><a th:href="@{/search}">Search</a></h3>
+		<h3><a th:href="@{/Home}">Home</a></h3>
 	</div>
 	
 </body>
