--- a/src/main/resources/templates/employee_page.html
+++ b/src/main/resources/templates/employee_page.html
@@ -44,10 +44,10 @@
                 </div>
 
                 <div class = "form-group">
-                    <label for ="username"> Username of Employee </label> :
+                    <label for ="employee_id">ID of Employee </label> :
                     <!--<input type="text" th:field="*{id}" class="form-control" placeholder="Employee ID" autofocus="autofocus"/> /-->
-                    <input type="text" class = "form-control" id ="username" name = "username"
-                           placeholder="Enter username of Employee" autofocus="autofocus">
+                    <input type="text" class = "form-control" id ="employee_id" name = "employee_id"
+                           placeholder="Enter ID of Employee" autofocus="autofocus">
                 </div>
 
                 <div class="form-group">
