--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
 		<h3><a th:href="@{/login}">Login</a></h3>
 		<h3><a th:href="@{/search}">Search</a></h3>
 		<h3><a th:href="@{/Home}">Home</a></h3>
+		<h3><a th:href="@{/admin}">For admin only</a></h3>
 	</div>
 	
 </body>
