--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta charset="ISO-8859-1">
-	<title>List Users</title>
-	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
-	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+		  rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
-<body>
-<div class="container text-center">
-	<div>
-		<form th:action="@{/logout}" method="post">
-			<p>
-				Welcome <b>[[${#request.userPrincipal.principal.username}]]</b>
-			</p>
-			<input type="submit" value="Sign Out" />
-		</form>
-	</div>
-	<div>
-		<h1>List of Users</h1>
-	</div>
-	
-	<div>
-		<table class="table table-striped table-bordered">
-			<thead class="thead-dark">
-				<tr>
-					<th>User ID</th>
-					<th>E-mail</th>
-					<th>Username</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="user: ${listUsers}">
-					<td th:text="${user.id}">User ID</td>
-					<td th:text="${user.email}">E-mail</td>
-					<td th:text="${user.username}">First Name</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-</div>
+<body style="margin: 50px;">
+<h1>List of Users</h1>
+<br>
+<table class="table">
+	<thead>
+	<tr>
+		<th>User ID</th>
+		<th>E-mail</th>
+		<th>Username</th>
+		<th>Active</th>
+<!--		<th>Action</th>-->
+	</tr>
+	</thead>
+
+	<tbody>
+	<tr th:each="user: ${listUsers}">
+		<td th:text="${user.id}">User ID </td>
+		<td th:text="${user.email}">E-mail</td>
+		<td th:text="${user.username}">Username</td>
+		<td th:text="${user.active}">Active</td>
+<!--		<td>-->
+<!--			<a class='btn btn-primary btn-sm' href='update'>Update</a>-->
+<!--			<a class='btn btn-danger btn-sm' href='delete'>Delete</a>-->
+		</td>
+	</tr>
+	</tbody>
+</table>
 </body>
 </html>
