--- a/src/main/resources/templates/access-denied.html
+++ b/src/main/resources/templates/access-denied.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Something went wrong</title>
+    <title>Access allowed only for admin!</title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -37,9 +37,7 @@
 <br>
 <br>
 <div class="container text-center">
-    <h1>Something went wrong!</h1>
-    <br>
-    <h2>Our engineers are on it.</h2>
+    <h1>Access allowed only for admin!</h1>
 </div>
 </body>
 </html>
