--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
 		<h3><a th:href="@{/Home}">Home</a></h3>
 		<h3><a th:href="@{/admin}">For admin only</a></h3>
 		<h3><a th:href="@{/getInfo}">Get info</a></h3>
+		<h3><a th:href="@{/test}">Test</a></h3>
 	</div>
 	
 </body>
