--- a/src/main/resources/templates/user_page.html
+++ b/src/main/resources/templates/user_page.html
@@ -8,6 +8,8 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous">
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"-->
+<!--          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
 </head>
 <body>
 
@@ -34,7 +36,7 @@
     <div class = "row">
         <div class = "col-md-6 col-md-offset-3">
 
-            <h1> Search your info </h1>
+            <h1> Get your info from database </h1>
             <!--/*@thymesVar id="employee" type=""*/-->
             <form th:action="@{/getInfo}" th:object="${user}" method="post">
 
@@ -44,9 +46,9 @@
                 </div>
 
                 <div class = "form-group">
-                    <label for ="username">Username </label> :
+                    <label for ="username">Insert your username </label>
                     <!--<input type="text" th:field="*{id}" class="form-control" placeholder="Employee ID" autofocus="autofocus"/> /-->
-                    <input type="text" class = "form-control" id ="username" name = "username"
+                    <input type="text" class = "form-control" id ="username" name = "username" th:field="*{username}"
                            placeholder="Enter your username" autofocus="autofocus">
                 </div>
 
@@ -60,11 +62,26 @@
                 </div>
                 <div alight="left">
                     <tr>
-                        <label class="form-label" >User id</label>
+                        <label class="form-label" >E-mail</label>
                         <td>
                             <!--/*@thymesVar id="ename" type="string"*/-->
                             <!--/*@thymesVar id="ename" type=""*/-->
-                            <input type="text" th:field="${user.email}" class="form-control" placeholder="ID" />
+<!--                            <input type="text" th:field="${user.email}" class="form-control" placeholder="ID" />-->
+                            <input type="text" th:field="*{email}" class="form-control" placeholder="Email" />
+                        </td>
+                    </tr>
+                    <br>
+                    <tr>
+                        <label class="form-label" >Password</label>
+                        <td>
+                            <input type="text" th:field="*{password}" class="form-control" placeholder="Password" />
+                        </td>
+                    </tr>
+                    <br>
+                    <tr>
+                        <label class="form-label" >Active user</label>
+                        <td>
+                            <input type="text" th:field="*{active}" class="form-control" placeholder="Active user" />
                         </td>
                     </tr>
                 </div>
@@ -72,5 +89,30 @@
         </div>
     </div>
 </div>
+<!--<br>-->
+<!--<table class="table">-->
+<!--    <thead>-->
+<!--    <tr>-->
+<!--        <th>User ID</th>-->
+<!--        <th>E-mail</th>-->
+<!--        <th>Username</th>-->
+<!--        <th>Active</th>-->
+        <!--		<th>Action</th>-->
+<!--    </tr>-->
+<!--    </thead>-->
+
+<!--    <tbody>-->
+<!--    <tr th:each="user: ${listUsers}">-->
+<!--        <td th:text="${user.id}">User ID </td>-->
+<!--        <td th:text="${user.email}">E-mail</td>-->
+<!--        <td th:text="${user.username}">Username</td>-->
+<!--        <td th:text="${user.active}">Active</td>-->
+        <!--		<td>-->
+        <!--			<a class='btn btn-primary btn-sm' href='update'>Update</a>-->
+        <!--			<a class='btn btn-danger btn-sm' href='delete'>Delete</a>-->
+<!--        </td>-->
+<!--    </tr>-->
+<!--    </tbody>-->
+<!--</table>-->
 </body>
 </html>
