--- a/src/main/resources/templates/user_page.html
+++ b/src/main/resources/templates/user_page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html html lang="cs" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
+<html html lang="cs" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="ISO-8859-1">
     <title>Search employee</title>
@@ -7,9 +8,25 @@
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-          crossorigin="anonymous">
+          crossorigin="anonymous"/>
 <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"-->
 <!--          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
+<style>
+    .b-green, .b-green:before {
+        color: white;
+        padding: 9px 12px;
+        text-align: center;
+
+        background: rgba(73,155,234,1);
+        background: -moz-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+        background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(73,155,234,1)), color-stop(100%, rgba(26,188,156,1)));
+        background: -webkit-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+        background: -o-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+        background: -ms-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+        background: linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#1abc9c', GradientType=1 );
+    }
+</style>
 </head>
 <body>
 
@@ -84,7 +101,26 @@
                             <input type="text" th:field="*{active}" class="form-control" placeholder="Active user" />
                         </td>
                     </tr>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                 </div>
+                <div class="text-center">
+                    <a href="#" th:href="@{/logout}" class="button2 b-green rot-135">Log out</a>
+                </div>
+<!--                <form name = "logoutForm" th:action="@{/logout}" method="post">-->
+<!--                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+<!--                    <input type="submit" value="Sign out"/>-->
+
+<!--                <div sec:authorize="isAuthenticated()">-->
+<!--                    <a href="javascript: document.logoutForm.submit()" class="dropdown-toggle">Sign out</a>-->
+<!--                    <form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">-->
+<!--                        <input hidden type="submit" value="Sign Out" />-->
+<!--                    </form>-->
+<!--                </div>-->
+<!--                <a href="#" th:href="@{/logout}">Log Out</a>-->
+                </form>
             </form>
         </div>
     </div>
