--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet"
 		  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-		  crossorigin="anonymous">
+		  crossorigin="anonymous"/>
 
 <!--	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"-->
 <!--		  rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
@@ -19,6 +19,22 @@
 		h1 {text-align: center;}
 		p {text-align: center;}
 		div {text-align: center;}
+
+		 .b-green, .b-green:before {
+			 color: white;
+			 padding: 9px 12px;
+			 text-align: center;
+
+			 background: rgba(73,155,234,1);
+			 background: -moz-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+			 background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(73,155,234,1)), color-stop(100%, rgba(26,188,156,1)));
+			 background: -webkit-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+			 background: -o-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+			 background: -ms-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+			 background: linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+			 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#1abc9c', GradientType=1 );
+		 }
+
 	</style>
 </head>
 <body style="margin: 50px;">
@@ -46,6 +62,7 @@
 	<tr>
 		<th>User ID</th>
 		<th>E-mail</th>
+		<th>Account not locked</th>
 		<th>Username</th>
 		<th>Active</th>
 <!--		<th>Action</th>-->
@@ -56,6 +73,7 @@
 	<tr th:each="user: ${listUsers}">
 		<td th:text="${user.id}">User ID </td>
 		<td th:text="${user.email}">E-mail</td>
+		<td th:text="${user.accountNonLocked}">Account not locked</td>
 		<td th:text="${user.username}">Username</td>
 		<td th:text="${user.active}">Active</td>
 <!--		<td>-->
@@ -65,5 +83,12 @@
 	</tr>
 	</tbody>
 </table>
+<br>
+<br>
+<br>
+<br>
+<div class="text-center">
+	<a href="#" th:href="@{/logout}" class="button2 b-green rot-135">Log out</a>
+</div>
 </body>
 </html>
