--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -12,9 +12,6 @@
 
 <!--	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"-->
 <!--		  rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<style>
 		h1 {text-align: center;}
 		p {text-align: center;}
@@ -34,6 +31,38 @@
 			 background: linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
 			 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#1abc9c', GradientType=1 );
 		 }
+
+		table {
+			border-collapse: collapse;
+			border: 2px solid rgb(200,200,200);
+			letter-spacing: 1px;
+			font-size: 0.8rem;
+		}
+
+		td, th {
+			border: 1px solid rgb(190,190,190);
+			padding: 10px 20px;
+		}
+
+		th {
+			background-color: rgb(235,235,235);
+		}
+
+		td {
+			text-align: center;
+		}
+
+		tr:nth-child(even) td {
+			background-color: rgb(250,250,250);
+		}
+
+		tr:nth-child(odd) td {
+			background-color: rgb(245,245,245);
+		}
+
+		caption {
+			padding: 10px;
+		}
 
 	</style>
 </head>
@@ -90,5 +119,38 @@
 <div class="text-center">
 	<a href="#" th:href="@{/logout}" class="button2 b-green rot-135">Log out</a>
 </div>
+<br>
+<br>
+<br>
+<table>
+	<caption>
+		test table 1
+	</caption>
+	<colgroup>
+		<col />
+	</colgroup>
+	<tr>
+		<th>User ID</th>
+		<th>E-mail</th>
+		<th>Account not locked</th>
+		<th>Username</th>
+		<th>Active</th>
+		<!--		<th>Action</th>-->
+	</tr>
+	</thead>
+
+	<tbody>
+	<tr th:each="user: ${listUsers}">
+		<td th:text="${user.id}">User ID </td>
+		<td th:text="${user.email}">E-mail</td>
+		<td th:text="${user.accountNonLocked}">Account not locked</td>
+		<td th:text="${user.username}">Username</td>
+		<td th:text="${user.active}">Active</td>
+		<!--		<td>-->
+		<!--			<a class='btn btn-primary btn-sm' href='update'>Update</a>-->
+		<!--			<a class='btn btn-danger btn-sm' href='delete'>Delete</a>-->
+		</td>
+	</tr>
+</table>
 </body>
 </html>
