--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,7 +74,8 @@
 
 		p {
 			padding: 0.5em;
-			font-size: 15px;
+			font-size: 18px;
+			text-align: center;
 		}
 
 		code {
@@ -112,10 +113,13 @@
 	<br>
 	<section>
 		<h2>Login page</h2>
-		<p>Login (
-			<em>document object model</em>) of a web page is a tree-like structure containing all the elements in its HTML document as its nodes.</p>
-		<p>When creating a website from a design of what it will look like, it is useful to draw a box around each visual element on the page, and then code each box as an element of the DOM.  nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn nnnnnnnnnnnnnnnnnnn nnnnnnnnnnnnnnnnnnnnnnnnn
+		<br>
+		<p>authentication of users with the database</p>
+		<p>hashed passwords
 		</p>
+		<p>brute force attack</p>
+		<br>
+		<br>
 		<div class="text-center">
 			<a href="#" th:href="@{/login}" class="button2 b-green rot-135">Go to</a>
 		</div>
@@ -124,33 +128,49 @@
 	</section>
 	<section>
 		<h2>Register page</h2>
-		<p>Register (
-			<em>document object model</em>) of a web page is a tree-like structure containing all the elements in its HTML document as its nodes.</p>
-		<p>When creating a website from a design of what it will look like, it is useful to draw a box around each visual element on the page, and then code each box as an element of the DOM.nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn  nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn nnnnnnnnnnnnnnnnnnn nnnnnnnnnnnnnnnnnnnnnnnnn
-		</p>
+		<br>
+		<p>user registration</p>
+		<p>password validation</p>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 		<div class="text-center">
 			<a href="#" th:href="@{/register}" class="button2 b-green rot-135">Go to</a>
 		</div>
 	</section>
 	<section>
 		<h2>Show users</h2>
-		<p>Show users (
-			<em>document object model</em>) of a web page is a tree-like structure containing all the elements in its HTML document as its nodes.</p>
-		<p>When creating a website from a design of what it will look like, it is useful to draw a box around each visual element on the page, and then code each box as an element of the DOM.nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn  nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn nnnnnnnnnnnnnnnnnnn nnnnnnnnnnnnnnnnnnnnnnnnn
-		</p>
+		<br>
+		<p>get all users from database</p>
+		<p>roles implementation</p>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 		<div class="text-center">
 			<a href="#" th:href="@{/users}" class="button2 b-green rot-135">Go to</a>
 		</div>
 	</section>
 	<section>
 		<h2>Get your info</h2>
-		<p>Get your info (
-			<em>document object model</em>) of a web page is a tree-like structure containing all the elements in its HTML document as its nodes.</p>
-		<p>When creating a website from a design of what it will look like, it is useful to draw a box around each visual element on the page, and then code each box as an element of the DOM.nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn  nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn nnnnnnnnnnnnnnnnnnn nnnnnnnnnnnnnnnnnnnnnnnnn
-		</p>
+		<br>
+		<p>get information of the user from database</p>
+		<p>SQL Injection</p>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 		<div class="text-center">
 			<a href="#" th:href="@{/user_page}" class="button2 b-green rot-135">Go to</a>
 		</div>
+		<br>
 	</section>
 </div>
 </body>
