--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -99,7 +99,7 @@
 			<a class="navbar-brand" href="#" th:href="@{/login}">Login</a>
 			<a class="navbar-brand" href="#" th:href="@{/register}">Register</a>
 			<a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
-			<a class="navbar-brand" href="#" th:href="@{/getInfo}">Get info</a>
+			<a class="navbar-brand" href="#" th:href="@{/user_page}">Get info</a>
 			<a class="navbar-brand" href="#" th:href="@{/logout}">Log out</a>
 		</div>
 	</div>
@@ -107,7 +107,7 @@
 <br>
 <br>
 <br>
-<b><h1> Home Page</h1></b>
+<b><h1> Home page</h1></b>
 <div class="container">
 	<br>
 	<br>
