--- a/src/main/resources/templates/user_page.html
+++ b/src/main/resources/templates/user_page.html
@@ -55,7 +55,7 @@
 
             <h1> Get your info from database </h1>
             <!--/*@thymesVar id="employee" type=""*/-->
-            <form th:action="@{/getInfo}" th:object="${user}" method="post">
+            <form th:action="@{/user_page}" th:object="${user}" method="post">
 
                 <!-- logout message -->
                 <div th:if="${param.logout}">
@@ -79,7 +79,7 @@
                 </div>
                 <div alight="left">
                     <tr>
-                        <label class="form-label" >Error Message</label>
+                        <label class="form-label" >Error message</label>
                         <td>
                             <input type="text" th:field="*{message}" class="form-control" style="color: red" placeholder="Error Message" />
                         </td>
