--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="ISO-8859-1">
     <title>Registration and Login App</title>
@@ -36,7 +36,6 @@
 
             <h1> User Login Page </h1>
             <form th:action="@{/login}" method="post">
-
                 <!-- error message -->
                 <div th:if="${param.error}">
                     <div class="alert alert-danger">Invalid username or
