--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -50,17 +50,17 @@
 				</div>
 
 				<div class="form-group">
-					<label class="control-label" for="email"> Email </label> <input
+					<label class="control-label" for="email"> E-mail </label> <input
 						id="email" class="form-control" th:field="*{email}" required
 						autofocus="autofocus" />
 				</div>
 
 				<div class="form-group">
 					<label class="control-label" for="password"> Password </label> <input
-						id="password" class="form-control" type="password" name="password"
-						th:field="*{password}" required autofocus="autofocus" th:errorClass="is-invalid">
-					<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red" class="invalid-feedback">
-					</div>
+						id="password" class="form-control" type="password" name="password" required autofocus="autofocus"/>
+<!--						th:field="*{password}" th:errorClass="is-invalid">-->
+<!--					<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red" class="invalid-feedback"></div>-->
+
 <!--						pattern="(?=.*\d)(?=.*[a-z])(?=.*[@$!%*#?&><^-_/~%()+=])(?=.*[A-Z]).{8,}"-->
 <!--						title="Must contain at least one number, one uppercase and lowercase letter, one special character and at least 8 or more characters"/>-->
 				</div>
