--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -46,7 +46,8 @@
 				<div class="form-group">
 					<label class="control-label" for="username"> Username </label>
 					<input id="username" class="form-control" th:field="*{username}"
-						   required autofocus="autofocus" />
+						   required autofocus="autofocus" th:errorClass="is-invalid">
+									<div th:if="${#fields.hasErrors('username')}" th:errors="*{password}" style="color: red" class="invalid-feedback"></div>
 				</div>
 
 				<div class="form-group">
