--- a/src/main/resources/templates/user_page.html
+++ b/src/main/resources/templates/user_page.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Search employee</title>
+    <title>User page</title>
 
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -66,7 +66,8 @@
                     <label for ="username">Insert your username </label>
                     <!--<input type="text" th:field="*{id}" class="form-control" placeholder="Employee ID" autofocus="autofocus"/> /-->
                     <input type="text" class = "form-control" id ="username" name = "username" th:field="*{username}"
-                           placeholder="Enter your username" autofocus="autofocus" required >
+                           placeholder="Enter your username" autofocus="autofocus" required th:errorClass="is-invalid">
+                    					<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" style="color: red" class="invalid-feedback"></div>
                 </div>
 
                 <div class="form-group">
