--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -131,9 +131,12 @@
 	<br>
 	<br>
 	<section>
-		<h2>Rolex</h2>
+		<h2>Watch1</h2>
 		<br>
-		<br>
+		<img th:src="@{resources/images/rolex.PNG}" height="50" width="50" alt="Media Resource"/>
+		<img th:src="@{static/resources/images/rolex.PNG}" height="50" width="50" alt="Media Resource"/>
+<!--		<img src="/resources/image/rolex.PNG" />-->
+		<img th:src="@{images/rolex.PNG}" />
 		<br>
 		<br>
 		<br>
@@ -144,61 +147,61 @@
 		<!--    <a href="#" class="btn blue">Blue Button</a>-->
 	</section>
 	<section>
-		<h2>Rolex2</h2>
+		<h2>Watch2</h2>
 		<br>
 		<br>
 		<br>
 		<br>
 		<br>
 		<div class="text-center">
-			<a href="#" th:href="@{/register}" class="button2 b-green rot-135">Shop Item</a>
+			<a href="#" th:href="@{/watch2}" class="button2 b-green rot-135">Shop Item</a>
 		</div>
 		<br>
 	</section>
 	<section>
-		<h2>Rolex3</h2>
+		<h2>Watch3</h2>
 		<br>
 		<br>
 		<br>
 		<br>
 		<br>
 		<div class="text-center">
-			<a href="#" th:href="@{/users}" class="button2 b-green rot-135">Shop Item</a>
+			<a href="#" th:href="@{/watch3}" class="button2 b-green rot-135">Shop Item</a>
 		</div>
 	</section>
 	<section>
-		<h2>Rolex4</h2>
+		<h2>Watch4</h2>
 		<br>
 		<br>
 		<br>
 		<br>
 		<br>
 		<div class="text-center">
-			<a href="#" th:href="@{/user_page}" class="button2 b-green rot-135">Shop Item</a>
-		</div>
-		<br>
-	</section>
-	<section>
-		<h2>Rolex5</h2>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<div class="text-center">
-			<a href="#" th:href="@{/delete_user}" class="button2 b-green rot-135">Shop Item</a>
+			<a href="#" th:href="@{/watch4}" class="button2 b-green rot-135">Shop Item</a>
 		</div>
 		<br>
 	</section>
 	<section>
-		<h2>Rolex6</h2>
+		<h2>Watch5</h2>
 		<br>
 		<br>
 		<br>
 		<br>
 		<br>
 		<div class="text-center">
-			<a href="#" th:href="@{/delete_user}" class="button2 b-green rot-135">Shop Item</a>
+			<a href="#" th:href="@{/watch5}" class="button2 b-green rot-135">Shop Item</a>
+		</div>
+		<br>
+	</section>
+	<section>
+		<h2>Watch6</h2>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<div class="text-center">
+			<a href="#" th:href="@{/watch6}" class="button2 b-green rot-135">Shop Item</a>
 		</div>
 		<br>
 	</section>
