--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -77,6 +77,7 @@
             </div>
         </div>
     </div>
+<!--    <img th:src="@{/resources/images/rolex.PNG}" height="50" width="50" alt="Media Resource"/>-->
 </div>
 </body>
 </html>
