--- a/src/main/resources/templates/watch1.html
+++ b/src/main/resources/templates/watch1.html
@@ -270,7 +270,7 @@
 <br>
 <br>
 <b><h1>Watch1</h1></b>
-<form th:action="@{/shoppingcart}" method="post" th:object="${item}">
+<form th:action="@{/watch1}" method="post" th:object="${item}">
 <div class="container">
     <br>
     <br>
