--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -133,10 +133,7 @@
 	<section>
 		<h2>Watch1</h2>
 		<br>
-		<img th:src="@{resources/images/rolex.PNG}" height="50" width="50" alt="Media Resource"/>
-		<img th:src="@{static/resources/images/rolex.PNG}" height="50" width="50" alt="Media Resource"/>
-<!--		<img src="/resources/image/rolex.PNG" />-->
-		<img th:src="@{images/rolex.PNG}" />
+		<img src="https://www.maxpixel.net/static/photo/1x/Wristwatch-Rolex-Watches-Watch-Luxury-Watch-Class-4696644.jpg" height="200" width="350" alt="Media Resource"/>
 		<br>
 		<br>
 		<br>
